2010-04-09  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/capplet-utils.c (capplet_tree_model_foreach),
	(capplet_model_foreach):
	* capplet/capplet-utils.h: Add a new tree model foreach func.
	* capplet/nwam_pref_dialog.c (nwam_capplet_dialog_init),
	(daemon_info), (ncp_add_ncu), (ncp_remove_ncu),
	(nwamui_util_foreach_nwam_object_add_to_tree_store),
	(show_combo_add), (show_combo_remove), (combo_find_proper_pos):
	* capplet/nwam_profile_dialog.c (net_conf_set_property): Fixed
	15314 [NWAM] Force refresh after editing network profile?
	* common/libnwamui.c:
	* common/libnwamui.h: Remomve unused code.
	* common/nwamui_ncp.c (nwamui_ncp_class_init):
	* common/nwamui_ncp.h: Clean code. Change some signal slightly,
	for adding a container object lately.
	* common/nwamui_ncu.c: Clean code.
	* daemon/main.c (init_wait_for_embedding_idle),
	(init_wait_for_embedding): Fixed 15524 nwam-manager shouldn't run
	gtk_status_icon_is_embedded in idle
	* daemon/status_icon.c (connect_nwam_object_signals): Signals
	changed.
	* help/C/nwam-manager.xml: Updated OLH due to 15136 Remove
	'Network Locations' menu-item

2010-03-25  Lin Ma  <Lin.Ma@Sun.COM>

	* data/Makefile.am:
	* data/nwam-manager-properties.desktop.in:
	* data/nwam-manager.desktop.in.in:
	* data/nwam-network.desktop.in:
	* data/nwam-network.desktop.in.in:
	Fixed remove 'Network Locations'

2010-03-23  Lin Ma  <Lin.Ma@Sun.COM>

	* configure.in: bump to 1.0.1
	* Makefile.am: Clean removed files.
	* common/nwamui_env.c (nwamui_env_set_property),
	(nwamui_env_get_property), (set_nwam_loc_string_prop),
	(nwamui_env_set_nameservices), (nwamui_env_get_nameservices),
	(nwamui_env_set_nameservices_config_file),
	(nwamui_env_get_nameservices_config_file),
	(nwamui_env_set_default_domainname),
	(nwamui_env_get_default_domainname),
	(nwamui_env_set_dns_nameservice_domain),
	(nwamui_env_get_dns_nameservice_domain),
	(nwamui_env_set_dns_nameservice_config_source),
	(nwamui_env_get_dns_nameservice_config_source),